package padroescomportamentais.command;

public class Cozinha {

    public String prepararPrato(String prato) {
        return "Cozinha preparou: " + prato;
    }

    public String descartarPrato(String prato) {
        return "Cozinha descartou: " + prato;
    }
}
