package padroescomportamentais.command;

public interface IComando {
    String executar();
    String cancelar();
}
